Navbar and banner added.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,15 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Theme:
+$eerie-black: #202121;
+$smoky-black: #171506;
+$pale-azure: #7Bd4F6;
+$non-photo-blue: #ABE2F8;
+$alice-blue: #ECF9FE;
+$mantis: #7DD181;
+$pine-green: #157A6E;
+$azure-web: #EEFCFA;
+$silver: #CCCCCC;
+$platinum: #D9D9D9;
