--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>HELLO WORLD!</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('banner-annie-spratt.jpg') %>);">
+  <div class="container">
+    <h1>BANNER HEADER TEXT</h1>
+    <h2>Subheader text here</h2>
+    <a class="btn btn-azure" href="#">REGISTEREN</a>
+  </div>
+</div>
