--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,22 @@
-// Specific CSS for your home-page
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+}
+
+.banner h1 {
+  color: #ABE2F8;
+  font-family: "Montserrat", sans-serif;
+  font-size: 72px;
+  font-weight: bold;
+  margin: 0;
+  margin-bottom: 20px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.banner h2 {
+  color: #D9D9D9;
+  font-size: 42px;
+  margin-bottom: 32px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
