Added Home text and footer.

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .btn-azure {
-  color: #ECF9FE;
-  background-color: #7Bd4F6;
+  color: #EDF8FC;
+  background-color: #70C9E8;
   border-radius: 50px;
   font-size: 34px;
   padding: 8px 48px;
@@ -8,6 +8,6 @@
 }
 
 .btn-azure:hover {
-  color: #ECF9FE;
-  background-color: #ABE2F8;
+  color: #EDF8FC;
+  background-color: #96D8EE;
 }
