--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,12 +11,25 @@ $light-gray: #F4F4F4;
 
 // Theme:
 $eerie-black: #202121;
-$smoky-black: #171506;
 $pale-azure: #7Bd4F6;
 $non-photo-blue: #ABE2F8;
-$alice-blue: #ECF9FE;
 $mantis: #7DD181;
-$pine-green: #157A6E;
 $azure-web: #EEFCFA;
 $silver: #CCCCCC;
+
+$smoky-black: #171506;
 $platinum: #D9D9D9;
+$alice-blue: #EDF8FC;
+$non-photo-blue: #96D8EE;
+$sky-blue: #70C9E8;
+$UN-blue: #5A8FCB;
+$pine-green: #136F63;
+$light-green: #ACEB98;
+$mindaro: #D7FFAB;
+$lavender-blush: #E0D8DE;
+$chinese-violet: #896279;
+$raspberry-rose: #AF3B6E;
+$crimson: #D7263D;
+$giants-orange: #F46036;
+$maize: #FFF07C;
+$papaya-whip: #FFEFD3;
