--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,9 @@
 @import "pages/index";
 
 body {
-  background-color: #EEFCFA;
+  background-color: #EDF8FC;
+}
+
+h3, h4, p {
+  font-family: "Lato", sans-serif;
 }
