--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
 }
 
 .banner h1 {
-  color: #ABE2F8;
+  color: #70C9E8;
   font-family: "Montserrat", sans-serif;
   font-size: 72px;
   font-weight: bold;
@@ -19,4 +19,31 @@
   font-size: 42px;
   margin-bottom: 32px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.home-container {
+  display: flex;
+  align-items: flex-start;
+  margin: 42px auto;
+}
+
+.left-logo {
+  max-width: 220px;
+  margin-right: 42px;
+}
+
+.home-text {
+  flex: 1;
+}
+
+.home-text h3 {
+  color: #70C9E8;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.home-text p {
+  color: #171506;
+  font-size: 24px;
+  opacity: 0.8;
 }
