--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>STICHTING KANSEN ACADEMIE</title>
+    <title>Stichting Kansen Academie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,9 +11,12 @@
   </head>
 
   <%= render "shared/navbar" %>
-  <%= render "shared/flashes" %>
 
   <body>
     <%= yield %>
   </body>
+
+  <%= render "shared/flashes" %>
+  <%= render "shared/footer" %>
+
 </html>
