Resized fonts, images, and footer.

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,12 @@
 .footer {
+  // position: fixed;
+  // bottom: 0;
   background: #136F63;
   color: #D9D9D9;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 50px;
+  padding: 16px 48px;
   height: auto;
   width: 100%;
 }
