--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,13 +1,18 @@
+.home {
+  background-color: #EDF8FC;
+  min-height: calc(100vh - 143px);
+}
+
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  padding: 100px 0;
 }
 
 .banner h1 {
   color: #70C9E8;
   font-family: "Montserrat", sans-serif;
-  font-size: 72px;
+  font-size: 48px;
   font-weight: bold;
   margin: 0;
   margin-bottom: 20px;
@@ -16,7 +21,7 @@
 
 .banner h2 {
   color: #D9D9D9;
-  font-size: 42px;
+  font-size: 28px;
   margin-bottom: 32px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
@@ -24,11 +29,11 @@
 .home-container {
   display: flex;
   align-items: flex-start;
-  margin: 42px auto;
+  padding: 38px 0;
 }
 
 .left-logo {
-  max-width: 220px;
+  max-width: 180px;
   margin-right: 42px;
 }
 
@@ -38,12 +43,12 @@
 
 .home-text h3 {
   color: #70C9E8;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
 }
 
 .home-text p {
   color: #171506;
-  font-size: 24px;
+  font-size: 16px;
   opacity: 0.8;
 }
