Fixed attribute name error.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <h1>BANNER HEADER TEXT</h1>
       <h2>Subheader text here</h2>
-      <a class="btn btn-azure" href="#">REGISTEREN</a>
+      <%= link_to "REGISTEREN", new_user_registration_path, class: "btn btn-azure" %>
     </div>
   </div>
 
