--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,4 +19,9 @@
   color: #D9D9D9;
   font-family: "Lato", sans-serif;
   font-size: 16px;
+  transition: 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #96D8EE;
 }
