--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -52,3 +52,31 @@
   font-size: 16px;
   opacity: 0.8;
 }
+
+@media (min-width: 1600px) {
+  .banner {
+    padding: 120px 0;
+  }
+  .banner h1 {
+    font-size: 60px;
+  }
+  .banner h2 {
+    font-size: 36px;
+  }
+  .home-container {
+    padding: 42px 0;
+  }
+  .left-logo {
+    max-width: 220px;
+  }
+  .home-text h3 {
+    font-size: 20px;
+  }
+  .home-text p {
+    font-size: 20px;
+  }
+  .btn-azure {
+    font-size: 34px;
+    padding: 8px 48px;
+  }
+}
