Sign Up and Login forms added.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,4 +19,8 @@
   <%= render "shared/flashes" %>
   <%= render "shared/footer" %>
 
+  <%# if controller_name == 'pages' && action_name == 'home' %>
+    <%#= render 'shared/footer' %>
+  <%# end %>
+
 </html>
