--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,16 @@
 @import "pages/index";
 
 body {
-  // background-color: #136F63;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('/assets/banner-annie-spratt.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
 }
 
 h3, h4, p {
