--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,14 +16,14 @@
 }
 
 .nav-link {
-  color: #D9D9D9;
+  color: #D9D9D9 !important;
   font-family: "Lato", sans-serif;
   font-size: 16px;
   transition: 0.3s ease;
 }
 
 .nav-link:hover {
-  color: #96D8EE;
+  color: #96D8EE !important;
 }
 
 .nav-item {
