--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,7 +38,7 @@
             <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Login", "#loginModal", class: "nav-link", "data-bs-toggle" => "modal", "data-bs-target" => "#loginModal" %>
           </li>
         <% end %>
       </ul>
