--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -16,6 +16,7 @@
   color: #171506;
   font-weight: 500;
   margin-top: 20px;
+  margin-bottom: 40px;
   max-width: 1200px;
   padding: 50px;
   width: 70vw;
