--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,16 @@
 <div class="home">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('banner-annie-spratt.jpg') %>);">
     <div class="container">
-      <h1>BANNER HEADER TEXT</h1>
-      <h2>Subheader text here</h2>
-      <%= link_to "REGISTEREN", new_user_registration_path, class: "btn btn-azure" %>
+      <h1>BANNER KOPTEKST</h1>
+      <h2>Subkoptekst hier</h2>
+      <%= link_to "REGISTREREN", new_user_registration_path, class: "btn btn-azure" %>
     </div>
   </div>
 
   <div class="container home-container">
     <%= image_tag "ska-logo.png", class: "left-logo", alt: "Stichting Kansen Academie logo" %>
     <div class="home-text">
-      <h3>SUBSECTION</h3>
+      <h3>SUBSECTIE</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </div>
