--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Dashboard", "#", class: "nav-link" %>
+            <%= link_to "Dashboard", dashboards_index_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Cursussen", "#", class: "nav-link" %>
