Basic question-and-answer and attempt-tracking functionality added.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -24,12 +24,14 @@ $non-photo-blue: #96D8EE;
 $sky-blue: #70C9E8;
 $UN-blue: #5A8FCB;
 $pine-green: #136F63;
+$brunswick-green: #0F574E;
 $light-green: #ACEB98;
 $mindaro: #D7FFAB;
 $lavender-blush: #E0D8DE;
 $chinese-violet: #896279;
 $raspberry-rose: #AF3B6E;
 $crimson: #D7263D;
+$cardinal: #BF2237;
 $giants-orange: #F46036;
 $maize: #FFF07C;
 $papaya-whip: #FFEFD3;
