--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,10 @@
     </div>
 
     <%= render "shared/flashes" %>
-    <%= render "shared/footer" %>
 
-    <%# if controller_name == 'pages' && action_name == 'home' %>
-      <%#= render 'shared/footer' %>
-    <%# end %>
+    <% if controller_name == 'pages' && action_name == 'home' || devise_controller? %>
+      <%= render "shared/footer" %>
+    <% end %>
 
   </body>
 </html>
