Improved 'Add course' buttons.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -23,6 +23,7 @@ $alice-blue: #EDF8FC;
 $non-photo-blue: #96D8EE;
 $sky-blue: #70C9E8;
 $UN-blue: #5A8FCB;
+$steel-blue: #4580C4;
 $pine-green: #136F63;
 $brunswick-green: #0F574E;
 $light-green: #ACEB98;
