--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,5 +1,4 @@
 <div class="dashboard-container d-flex">
-
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
@@ -29,7 +28,7 @@
         </ul>
       </div>
 
-      <%= form_with url: register_for_course_path, method: :post, local: true do |f| %>
+      <%= form_with url: register_for_course_path, method: :post, data: { turbo: false }, id: 'registerForm' do |f| %>
         <%= hidden_field_tag :selected_course_id, '', id: 'selected_course_id' %>
         <%= f.submit 'Add', id: 'registerButton', disabled: true %>
       <% end %>
@@ -66,7 +65,6 @@
     <% end %>
 
   </div>
-
 </div>
 
 <script>
@@ -75,7 +73,9 @@
     const dropdownButton = document.getElementById('dropdownCourseButton');
     const registerButton = document.getElementById('registerButton');
     const selectedCourseInput = document.getElementById('selected_course_id');
+    const form = document.getElementById('registerForm');
 
+    // Handle dropdown item selection
     dropdownItems.forEach(function(item) {
       item.addEventListener('click', function(event) {
         event.preventDefault();
@@ -90,6 +90,13 @@
 
         // Enable the register button
         registerButton.disabled = false;
+      });
+    });
+
+    // Handle form submission and refresh the page
+    form.addEventListener('submit', function() {
+      form.addEventListener('ajax:complete', function() {
+        window.location.reload();
       });
     });
   });
