--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,9 +13,9 @@ $light-gray: #F4F4F4;
 $eerie-black: #202121;
 $pale-azure: #7Bd4F6;
 $non-photo-blue: #ABE2F8;
-$mantis: #7DD181;
 $azure-web: #EEFCFA;
 $silver: #CCCCCC;
+$mantis: #7DD181;
 
 $smoky-black: #171506;
 $platinum: #D9D9D9;
@@ -26,11 +26,16 @@ $UN-blue: #5A8FCB;
 $steel-blue: #4580C4;
 $pine-green: #136F63;
 $brunswick-green: #0F574E;
+$emerald: #6CC680;
+$emerald-dark: #4FBA66;
+$spring-green: #35FF69;
 $light-green: #ACEB98;
 $mindaro: #D7FFAB;
 $lavender-blush: #E0D8DE;
 $chinese-violet: #896279;
 $raspberry-rose: #AF3B6E;
+$munsell-red: #EC0B43;
+$NCS-red: #C30938;
 $crimson: #D7263D;
 $cardinal: #BF2237;
 $giants-orange: #F46036;
