--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -20,7 +20,7 @@
   margin-bottom: 20px;
 }
 
-.questions {
+.questions-progress {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -46,25 +46,25 @@
 }
 
 .correct-answer {
-  background-color: #136F63;
-  border-color: #136F63;
+  background-color: #6CC680;
+  border-color: #6CC680;
   color: white;
 }
 
 .correct-answer:hover {
-  background-color: #0F574E;
-  border-color: #0F574E;
+  background-color: #4FBA66;
+  border-color: #4FBA66;
 }
 
 .incorrect-answer {
-  background-color: #D7263D;
-  border-color: #D7263D;
+  background-color: #EC0B43;
+  border-color: #EC0B43;
   color: white;
 }
 
 .incorrect-answer:hover {
-  background-color: #BF2237;
-  border-color: #BF2237;
+  background-color: #C30938;
+  border-color: #C30938;
 }
 
 #dropdownCourseButton {
