--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,24 +1,81 @@
 <div class="dashboard-container d-flex">
-
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
     <h1><%= @course.title %></h1>
-    <h2>Question: <%= @question.content %></h2>
+    <h1 class="question-title">QUESTION #<%= @question_number %></h1>
 
-    <%= form_with url: submit_answer_course_question_path(@course, @question), method: :post, local: true do |f| %>
-      <div class="answers">
-        <% @answers.each_with_index do |answer, index| %>
-          <div class="answer">
-            <%= f.radio_button :answer, answer.id, id: "answer_#{answer.id}" %>
-            <%= f.label "answer_#{answer.id}", answer.content %>
+    <div class="question-box">
+      <h2><%= @question.content %></h2>
+
+      <%= form_with url: submit_answer_course_question_path(@course, @question), method: :post, local: true do |f| %>
+        <div class="answers">
+          <% @answers.each_with_index do |answer, index| %>
+            <div class="answer">
+              <%= f.radio_button :answer, answer.id, id: "answer_#{answer.id}" %>
+              <%= f.label "answer_#{answer.id}", answer.content %>
+            </div>
+          <% end %>
+        </div>
+
+        <%= f.submit "Answer", class: "btn btn-primary mt-3" %>
+      <% end %>
+    </div>
+
+    <div class="progress-box">
+
+      <!-- Navigation buttons with the progress bar in the middle -->
+      <div class="navigation-wrapper">
+        <div class="previous-button">
+          <% if @previous_question %>
+            <%= link_to course_question_path(@course, @previous_question), class: "chevron-btn" do %>
+              <i class="fa fa-chevron-left"></i>
+            <% end %>
+          <% else %>
+            <a class="chevron-btn" style="visibility: hidden;">
+              <i class="fa fa-chevron-left"></i>
+            </a>
+          <% end %>
+        </div>
+
+        <div class="questions-progress-wrapper">
+          <div class="questions-progress">
+            <% @course.questions.each_with_index do |question, index| %>
+              <% attempt = @attempts.find { |a| a.question_id == question.id } %>
+              <% if attempt %>
+                <% if attempt.chosen_answer.correct? %>
+                  <a href="<%= course_question_path(@course, question) %>" class="question-number correct-answer">
+                    <%= index + 1 %>
+                  </a>
+                <% else %>
+                  <a href="<%= course_question_path(@course, question) %>" class="question-number incorrect-answer">
+                    <%= index + 1 %>
+                  </a>
+                <% end %>
+              <% else %>
+                <a href="<%= course_question_path(@course, question) %>" class="question-number">
+                  <%= index + 1 %>
+                </a>
+              <% end %>
+            <% end %>
           </div>
-        <% end %>
+        </div>
+
+        <div class="next-button">
+          <% if @next_question %>
+            <%= link_to course_question_path(@course, @next_question), class: "chevron-btn" do %>
+              <i class="fa fa-chevron-right"></i>
+            <% end %>
+          <% else %>
+            <a class="chevron-btn" style="visibility: hidden;">
+              <i class="fa fa-chevron-right"></i>
+            </a>
+          <% end %>
+        </div>
       </div>
 
-      <%= f.submit "Submit Answer", class: "btn btn-primary mt-4" %>
-    <% end %>
+    </div>
   </div>
 </div>
