--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -17,7 +17,7 @@
   width: 50%;
 }
 
-.btn-primary, .btn-danger {
+.btn-primary, .btn-danger, #add-question-button {
   background-color: #5A8FCB;
   border: 1px solid #4580C4;
   border-radius: 16px;
@@ -39,4 +39,17 @@
 .btn-danger:hover {
   color: white;
   background-color: #C30938;
+}
+
+#add-question-button {
+  color: white;
+  background-color: #6CC680;
+  border: 1px solid #4FBA66;
+  border-radius: 50%;
+  padding: 8px 14px;
+}
+
+#add-question-button:hover {
+  color: white;
+  background-color: #4FBA66;
 }
