--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -45,8 +45,8 @@
   color: white;
   background-color: #6CC680;
   border: 1px solid #4FBA66;
-  border-radius: 50%;
-  padding: 8px 14px;
+  // border-radius: 50%;
+  // padding: 8px 14px;
 }
 
 #add-question-button:hover {
