--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,4 @@
-<div class="dashboard-container d-flex">
-
+<div class="dashboard-container d-flex" data-controller="course-form">
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
 
@@ -12,61 +11,26 @@
       <%= f.input :title, label: "Course Title", input_html: { class: 'form-control', style: 'max-width: 600px;' } %>
       <%= f.input :description, label: "Course Description", input_html: { maxlength: 250, class: 'form-control', style: 'max-width: 600px;' } %>
 
-      <div id="questions-container">
+      <div id="questions-container" data-course-form-target="questionsContainer">
         <!-- This container will hold the dynamically added questions -->
       </div>
 
-      <!-- Add Question Button -->
-      <div class="my-4">
-        <button type="button" id="add-question-button" class="btn btn-success"><i class="fa-solid fa-plus"></i></button>
+      <!-- Question Type Dropdown and Add Question Button -->
+      <div class="d-flex align-items-center my-4">
+        <select id="question-type-dropdown" class="form-select me-3" style="max-width: 300px;" data-course-form-target="questionTypeDropdown">
+          <option value="multiple_choice">Multiple Choice</option>
+          <option value="open_answer">Open Answer</option>
+          <option value="true_false">True/False</option>
+          <option value="matching">Matching</option>
+          <option value="ordering">Ordering</option>
+          <option value="multiple_answer">Multiple Answer</option>
+        </select>
+
+        <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion">Add Question</button>
       </div>
 
       <%= f.submit "Create Course", class: "btn btn-primary mb-5" %>
     <% end %>
 
   </div>
-
 </div>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    let questionCount = 0;
-
-    const addQuestionButton = document.getElementById('add-question-button');
-    const questionsContainer = document.getElementById('questions-container');
-
-    addQuestionButton.addEventListener('click', function() {
-      questionCount++;
-      const questionNumber = questionCount;
-
-const questionHTML = `
-  <div class="question-fields mb-4">
-    <h4 class="new-question">Question ${questionNumber}</h4>
-    <div class="form-group">
-      <label for="course_questions_attributes_${questionNumber}_content">Question</label>
-      <input type="text" name="course[questions_attributes][${questionNumber}][content]" id="course_questions_attributes_${questionNumber}_content" class="form-control" style="max-width: 600px;">
-    </div>
-    <input type="hidden" name="course[questions_attributes][${questionNumber}][question_type]" value="multiple_choice">
-    <div class="answers mt-2">
-      <h4 class="new-question">Answers</h4>
-      ${[...Array(4)].map((_, i) => `
-        <div class="answer-fields d-flex align-items-center mb-2">
-          <div class="form-group d-flex align-items-center" style="width: 100%;">
-            <input type="text" name="course[questions_attributes][${questionNumber}][answers_attributes][${i}][content]" id="course_questions_attributes_${questionNumber}_answers_attributes_${i}_content" class="form-control" style="max-width: 495px; margin-right: 10px;">
-            <div class="form-check">
-              <input type="checkbox" name="course[questions_attributes][${questionNumber}][answers_attributes][${i}][correct]" id="course_questions_attributes_${questionNumber}_answers_attributes_${i}_correct" class="form-check-input">
-              <label class="form-check-label" for="course_questions_attributes_${questionNumber}_answers_attributes_${i}_correct">Correct?</label>
-            </div>
-          </div>
-        </div>
-      `).join('')}
-    </div>
-  </div>
-`;
-
-
-
-      questionsContainer.insertAdjacentHTML('beforeend', questionHTML);
-    });
-  });
-</script>
