Fixed Multiple-Answer questions.

--- a/app/assets/stylesheets/pages/_question.scss
+++ b/app/assets/stylesheets/pages/_question.scss
@@ -78,3 +78,7 @@
 .answers .form-group .form-control {
   margin-bottom: 12px;
 }
+
+.question-fields .form-group .form-control {
+  margin: 12px 0;
+}
