--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -30,8 +30,18 @@
                         <%= index + 1 %>
                       </a>
                     <% end %>
+                  <% elsif question.question_type == 'multiple_answer' %>
+                    <% if attempt.chosen_answers.any? && attempt.chosen_answers.all?(&:correct?) %>
+                      <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
+                        <%= index + 1 %>
+                      </a>
+                    <% else %>
+                      <a href="<%= course_question_path(course, question) %>" class="question-number incorrect-answer">
+                        <%= index + 1 %>
+                      </a>
+                    <% end %>
                   <% else %>
-                    <% if attempt.chosen_answer&.correct? %>
+                    <% if attempt.chosen_answers.first&.correct? %>
                       <a href="<%= course_question_path(course, question) %>" class="question-number correct-answer">
                         <%= index + 1 %>
                       </a>
